tests/object_is/object_is.exp
Error ------------------------------------------------------- object_is.js:20:17

Error: object_is.js:20
 20: var b: string = Object.is('a', 'a');
                     ^^^^^^^^^^^^^^^^^^^ Cannot assign `Object.is(...)` to `b` because boolean [1] is incompatible with string [2].
  References:
   41:     static is(a: any, b: any): boolean;
                                      ^^^^^^^ [1]: boolean. See lib: <BUILTINS>/core.js:41
   20: var b: string = Object.is('a', 'a');
              ^^^^^^ [2]: string

Error ------------------------------------------------------- object_is.js:22:38

Error: object_is.js:22
 22: var d: boolean = Object.is('a', 'b', 'c'); // Error - 'c' is unused
                                          ^^^ Cannot call method `is` because no more than 2 arguments are expected by function type [1].
  References:
   41:     static is(a: any, b: any): boolean;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: function type. See lib: <BUILTINS>/core.js:41


Found 2 errors
